--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     let lastUser = "";
     let lastGroup = null;
 
-    // Use redirect method for desktop compatibility
+    // Sign-In with redirect
     document.getElementById("googleSignInBtn").onclick = function() {
       auth.signInWithRedirect(provider);
     };
 
-    // Handle redirect result
+    // Handle redirect result after login
     auth.getRedirectResult().then(result => {
       if (result.user) {
         const user = result.user;
@@ -95,8 +95,7 @@
     auth.onAuthStateChanged(user => {
       if (user) {
         currentUser = user.displayName;
-        currentStatus = "Available";
-        usersRef.child(currentUser).set({ name: currentUser, status: currentStatus, photoURL: user.photoURL || "" });
+        usersRef.child(currentUser).set({ name: currentUser, status: "Available", photoURL: user.photoURL || "" });
         document.getElementById("login").style.display = "none";
         document.getElementById("chat").style.display = "block";
       } else {
@@ -169,4 +168,12 @@
 
       const textEl = document.createElement("div");
       textEl.className = "msg-text";
-      textEl.classList.add(msg.name === currentUser ? "
+      textEl.classList.add(msg.name === currentUser ? "my-msg" : "other-msg");
+      textEl.innerHTML = `${msg.message} <span class="time">(${msg.time || ''})</span>`;
+      lastGroup.querySelector(".msg-wrapper").appendChild(textEl);
+
+      messagesDiv.scrollTop = messagesDiv.scrollHeight;
+    });
+  </script>
+</body>
+</html>
